Fixes header spacing on recipe pages

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body > *{
     padding-top: 10px;
     justify-content: space-around;
     background-color: grey;
-    padding-bottom: 30px;
+    padding-bottom: 5px;
 }
 
 .right-links div{
